Build: Production build with correct asset paths

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
         env:
           NODE_ENV: production
 
+      - name: Copy _headers
+        run: cp _headers dist/_headers
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
